--- a/src/assets/posts/style.css
+++ b/src/assets/posts/style.css
@@ -376,12 +376,14 @@ form .btn-default {
 }
 
 .up-vote img, .down-vote img {
-    width: 24px;
+    width: 30px;
+    margin-left: 5px;
 }
 
 .rating {
-    margin-top: -3px;
-    margin-bottom: -6px;
+    margin-top: -6px;
+    margin-bottom: -8px;
+    margin-left: 5px;
 }
 
 .col-1 {
